2009-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* kern/parser.c (grub_parser_split_cmdline): Don't dereference NULL.

2009-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* normal/menu_text.c (grub_print_message_indented): Prevent
	past-the-end-of-array dereference.

2009-12-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* video/readers/jpeg.c (GRUB_MOD_FINI (grub_cmd_jpegtest)): Rename to ..
	(GRUB_MOD_FINI (video_reader_jpeg)): ...this

2009-12-27  Carles Pina i Estany  <carles@pina.cat>

	* normal/cmdline.c (grub_cmdline_get): Print a space after prompt.
	* normal/main.c (grub_normal_read_line): Remove a space from the
	default prompt.

2009-12-27  Carles Pina i Estany  <carles@pina.cat>

	* loader/i386/efi/linux.c (GRUB_MOD_INIT): Improve command summary.
	* loader/i386/ieee1275/linux.c (GRUB_MOD_INIT): Likewise.
	* loader/i386/linux.c (GRUB_MOD_INIT): Likewise.
	* loader/i386/pc/linux.c (GRUB_MOD_INIT): Likewise.
	* loader/powerpc/ieee1275/linux.c (GRUB_MOD_INIT): Likewise.
	* loader/sparc64/ieee1275/linux.c (GRUB_MOD_INIT): Likewise.
	* loader/xnu.c (GRUB_MOD_INIT): Likewise.

2009-12-26  Carles Pina i Estany  <carles@pina.cat>

	* video/readers/jpeg.c (cmd): Declare.
	(grub_cmd_jpegtest): Use `grub_command_t' type.
	(GRUB_MOD_INIT): Fix arguments passed to `grub_register_command'.
	Assign to `cmd'.
	(GRUB_MOD_FINI): Use `cmd' to unregister.
	* video/readers/png.c (cmd): Declare.
	(grub_cmd_pngtest): Use `grub_command_t' type.
	(GRUB_MOD_INIT): Fix arguments passed to `grub_register_command'.
	Assign to `cmd'.
	(GRUB_MOD_FINI): Use `cmd' to unregister.
	* video/readers/tga.c (cmd): Declare.
	(grub_cmd_tgatest): Use `grub_command_t' type.
	(GRUB_MOD_INIT): Fix arguments passed to `grub_register_command'.
	Assign to `cmd'.
	(GRUB_MOD_FINI): Use `cmd' to unregister.

2009-12-26  Carles Pina i Estany  <carles@pina.cat>

	* efiemu/main.c (GRUB_MOD_INIT): Fix capitalizations and/or full
	stops.
	* kern/corecmd.c (grub_register_core_commands): Likewise.